Add securityGroup & affinityRules.